devops/k8s/backend-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remitmortgage-backend-canary
  namespace: default
  labels:
    app: remitmortgage-backend-canary
    track: canary
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
      name: http
  selector:
    app: remitmortgage-backend-canary
    track: canary
