devops/k8s/backend-canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remitmortgage-backend-canary-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "5"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary-Test"
spec:
  rules:
    - host: api.remitmortgage.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: remitmortgage-backend-canary
                port:
                  number: 80
